# crypto-seal

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: package.rs  private_key.rs  shared.rs
src/: error.rs  format.rs  key.rs  lib.rs
src/format/: json.rs  postcard.rs
tests/: package.rs  private_key.rs
