[package]
name = "crypto-seal"
description = """
A small utility designed to securely "package" or seal serde-compatible data type that can passed around in an uncompromised manner.
"""
rust-version = "1.74"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dariusc93/crypto-seal"
readme = "README.md"
categories = ["cryptography"]
keywords = ["security", "cryptography"]
version = "0.3.0"
authors = ["Darius Clark"]
edition = "2021"
exclude = [".gitignore"]


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["serde"] }
curve25519-dalek = "4"
secp256k1 = { version = "0.28", features = ["rand-std", "serde"] }
sha2 = "0.10"
hmac = "0.12"
aes-gcm = { version = "0.10", features = ["stream"] }
anyhow = "1"
thiserror = "1"
zeroize = "1"
rand = "0.8"
bs58 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []