[package]
name = "crypto-seal"
description = """
A small utility designed to securely "package" or seal serde-compatible data type that can passed around in an uncompromised manner.
"""
rust-version = "1.74"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dariusc93/crypto-seal"
readme = "README.md"
categories = ["cryptography"]
keywords = ["security", "cryptography"]
version = "0.3.0"
authors = ["Darius Clark"]
edition = "2021"
exclude = [".gitignore"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.2.0", features = ["serde", "rand_core"] }
curve25519-dalek = "4.1.3"
k256 = { version = "0.13.4", features = ["ecdsa", "ecdh"] }
p256 = { version = "0.13.2", features = ["ecdsa", "ecdh"] }
p384 = { version = "0.13.1", features = ["ecdsa", "ecdh"] }
signature = "2.2.0"
sha2 = "0.10.9"
hmac = "0.12.1"
hkdf = "0.12.4"
aes-gcm = { version = "0.10.3", features = ["stream"] }
thiserror = "1.0.69"
zeroize = "1.9.0"
rand = "0.8.6"
bs58 = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", optional = true }
postcard = { version = "1.1.3", features = ["use-std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
anyhow = "1"

[features]
default = []
json = ["dep:serde_json"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
