[package]
name = "crypto-seal"
description = """
A small utility designed to securely "package" or seal serde-compatible data type that can passed around in an uncompromised manner.
"""
rust-version = "1.93"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dariusc93/crypto-seal"
readme = "README.md"
categories = ["cryptography"]
keywords = ["security", "cryptography"]
version = "0.3.0"
authors = ["Darius Clark"]
edition = "2024"
exclude = [".gitignore"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets", "alloc", "zeroize"] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["serde", "rand_core", "alloc", "zeroize"] }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "zeroize"] }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa", "ecdh", "alloc", "arithmetic"] }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "ecdh", "alloc", "arithmetic"] }
p384 = { version = "0.13.1", default-features = false, features = ["ecdsa", "ecdh", "alloc", "arithmetic"] }
signature = { version = "2.2.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
hmac = { version = "0.12.1", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc", "stream"] }
thiserror = { version = "2", default-features = false }
zeroize = { version = "1.9.0", default-features = false, features = ["alloc"] }
rand = { version = "0.8.6", default-features = false, features = ["getrandom"] }
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.150", default-features = false, features = ["alloc"], optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
anyhow = "1"

[features]
default = ["std"]
std = [
    "ed25519-dalek/std",
    "k256/std",
    "p256/std",
    "p384/std",
    "signature/std",
    "sha2/std",
    "hmac/std",
    "hkdf/std",
    "aes-gcm/std",
    "thiserror/std",
    "zeroize/std",
    "rand/std",
    "rand/std_rng",
    "bs58/std",
    "serde/std",
    "postcard/use-std",
    "serde_json?/std",
]
json = ["dep:serde_json"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
